# slowCodingCV

./: README.md
samples_C++/: CMakeLists.txt  ex_absdiff.cpp  ex_addWeighted.cpp  ex_convertTo.cpp  ex_copy.cpp  ex_copy2.cpp  ex_copyTo.cpp  ex_mat.cpp  ex_max.cpp  ex_mean.cpp  ex_minMaxLoc.cpp  ex_normalize.cpp  ex_scaleAdd.cpp  ex_setTo.cpp  ex_setTo2.cpp  ex_zeros.cpp  slowCoding.ipynb
samples_Python/: ex_absdiff.ipynb  ex_absdiff.py  ex_addWeighted.ipynb  ex_addWeighted.py  ex_argsort.py  ex_magnitude.py  ex_sortIdx.py  test_reduce.py
